--- a/assets/css/src/base/base.css
+++ b/assets/css/src/base/base.css
@@ -11,8 +11,8 @@
   src: url("../../../fonts/Gotham-Medium.eot?") format("eot"), url("../../../fonts/Gotham-Medium.woff") format("woff"), url("../../../fonts/Gotham-Medium.ttf") format("truetype"), url("../../../fonts/Gotham-Medium.svg#Gotham-Medium") format("svg"); }
 
 @font-face {
-  font-family: "Gotham-Thin";
-  src: url("../../../fonts/Gotham-Thin.eot?") format("eot"), url("../../../fonts/Gotham-Thin.woff") format("woff"), url("../../../fonts/Gotham-Thin.ttf") format("truetype"), url("../../../fonts/Gotham-Thin.svg#Gotham-Thin") format("svg"); }
+  font-family: "Gotham-Bold";
+  src: url("../../../fonts/Gotham-Bold.eot?") format("eot"), url("../../../fonts/Gotham-Bold.woff") format("woff"), url("../../../fonts/Gotham-Bold.ttf") format("truetype"), url("../../../fonts/Gotham-Bold.svg#Gotham-Bold") format("svg"); }
 
 #header-menu {
   position: fixed;
@@ -39,15 +39,15 @@
     @media only screen and (max-width: 480px) {
       #header-menu header {
         height: 60px; } }
-    #header-menu header #logo-hbs-cambio {
-      height: 51px;
-      margin-top: 10px; }
+    #header-menu header #logo-lien-top {
+      height: 35px;
+      margin-top: 19px; }
       @media only screen and (max-width: 1200px) {
-        #header-menu header #logo-hbs-cambio {
+        #header-menu header #logo-lien-top {
           height: 40px;
           margin-top: 17px; } }
       @media only screen and (max-width: 480px) {
-        #header-menu header #logo-hbs-cambio {
+        #header-menu header #logo-lien-top {
           height: 35px;
           margin-top: 15px; } }
   #header-menu .hamburguer {
@@ -73,7 +73,7 @@
       width: 22px;
       height: 3px;
       display: block;
-      background: #f94615;
+      background: #F94615;
       border-radius: 0px;
       -webkit-transition: all 0.25s ease-in-out 0s;
       -moz-transform: all 0.25s ease-in-out 0s;
@@ -156,7 +156,7 @@
           #header-menu .active .menu-container ul li a:before {
             display: none; }
           #header-menu .active .menu-container ul li a:hover {
-            color: #f94615; }
+            color: #F94615; }
           @media only screen and (max-height: 470px) {
             #header-menu .active .menu-container ul li a {
               font-size: 2em !important; } }
@@ -191,7 +191,7 @@
         #header-menu .end .menu-container ul li a:before {
           display: none; }
         #header-menu .end .menu-container ul li a:hover {
-          color: #f94615; }
+          color: #F94615; }
         @media only screen and (max-height: 470px) {
           #header-menu .end .menu-container ul li a {
             font-size: 2em !important; } }
@@ -229,7 +229,7 @@
           text-align: center;
           font-weight: 500;
           line-height: 40px;
-          font-size: 1.25em;
+          font-size: 1.18em;
           padding-top: 16px;
           -webkit-transition: background 0.3s, color 0.3s;
           transition: background 0.3s, color 0.3s;
@@ -245,7 +245,7 @@
             left: 0;
             width: 100%;
             height: 3px;
-            background: #f94615;
+            background: #F94615;
             -webkit-transform: scale3d(0, 5, 1);
             transform: scale3d(0, 5, 1);
             -webkit-transform-origin: 0% 50%;
