--- a/assets/css/src/pages/index.css
+++ b/assets/css/src/pages/index.css
@@ -11,5 +11,373 @@
   src: url("../../../fonts/Gotham-Medium.eot?") format("eot"), url("../../../fonts/Gotham-Medium.woff") format("woff"), url("../../../fonts/Gotham-Medium.ttf") format("truetype"), url("../../../fonts/Gotham-Medium.svg#Gotham-Medium") format("svg"); }
 
 @font-face {
-  font-family: "Gotham-Thin";
-  src: url("../../../fonts/Gotham-Thin.eot?") format("eot"), url("../../../fonts/Gotham-Thin.woff") format("woff"), url("../../../fonts/Gotham-Thin.ttf") format("truetype"), url("../../../fonts/Gotham-Thin.svg#Gotham-Thin") format("svg"); }
+  font-family: "Gotham-Bold";
+  src: url("../../../fonts/Gotham-Bold.eot?") format("eot"), url("../../../fonts/Gotham-Bold.woff") format("woff"), url("../../../fonts/Gotham-Bold.ttf") format("truetype"), url("../../../fonts/Gotham-Bold.svg#Gotham-Bold") format("svg"); }
+
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden; }
+
+@media only screen and (max-width: 992px) {
+  body {
+    font-size: 12px; } }
+
+@media only screen and (max-width: 768px) {
+  body {
+    font-size: 11px; } }
+
+@media only screen and (max-width: 480px) {
+  body {
+    font-size: 10px; } }
+
+.lien-button {
+  height: 5rem;
+  width: 25rem;
+  font-family: "Gotham-Book", sans-serif;
+  background-color: #FFF;
+  border: none;
+  color: #000;
+  padding: 0px;
+  border-radius: 40px;
+  font-size: 1.2rem;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  -webkit-transition: all 0.25s ease-in-out 0s;
+  -moz-transform: all 0.25s ease-in-out 0s;
+  -ms-transition: all 0.25s ease-in-out 0s;
+  transition: all 0.25s ease-in-out 0s; }
+  .lien-button:hover {
+    background-color: transparent;
+    color: #FFF;
+    border: 1px solid #FFF; }
+  @media only screen and (max-width: 992px) {
+    .lien-button {
+      height: 4.2rem;
+      width: 12.8rem;
+      font-size: 1rem;
+      margin-left: 50%;
+      -webkit-transform: translatex(-6.42rem) !important;
+      -moz-transform: translatex(-6.42rem) !important;
+      -ms-transform: translatex(-6.42rem) !important;
+      transform: translatex(-6.42rem) !important; } }
+
+.lien-button-cta {
+  width: 20rem;
+  font-weight: 400;
+  font-size: 1.1rem;
+  margin-left: 50%;
+  color: #FFF !important;
+  border-radius: 40px;
+  text-transform: uppercase;
+  background-color: #F94615 !important;
+  -webkit-transform: translatex(-10rem) !important;
+  -moz-transform: translatex(-10rem) !important;
+  -ms-transform: translatex(-10rem) !important;
+  transform: translatex(-10rem) !important; }
+  .lien-button-cta:hover {
+    background-color: transparent !important;
+    color: #FFF !important;
+    border: 1px solid #FFF !important; }
+  @media only screen and (max-width: 992px) {
+    .lien-button-cta {
+      margin-bottom: 2rem;
+      font-size: 1rem; } }
+
+.bgs, #home, #cta-1 {
+  position: relative;
+  float: left;
+  width: 100%;
+  background-position: top center;
+  background-size: cover; }
+  @media only screen and (max-width: 992px) {
+    .bgs, #home, #cta-1 {
+      background-attachment: scroll !important;
+      background-repeat: no-repeat !important;
+      background-position: center center !important; } }
+
+.title-big-white {
+  font-family: "Gotham-Black", sans-serif;
+  font-size: 3.2em;
+  color: #FFF; }
+  .title-big-white .extra-big {
+    font-size: 6rem; }
+
+.title-section {
+  color: #58585a;
+  font-size: 6em;
+  position: relative;
+  float: left;
+  width: 100%;
+  font-family: "Gotham-Black", sans-serif;
+  font-weight: 700;
+  margin-bottom: 0.8em;
+  margin-top: 1em; }
+  .title-section:after {
+    content: '';
+    position: absolute;
+    bottom: 1em;
+    width: 1.85em;
+    height: 8px;
+    background-color: #F94615;
+    top: 1.3em;
+    float: left;
+    left: 5px; }
+  @media only screen and (max-width: 480px) {
+    .title-section {
+      font-size: 3.3em; } }
+  @media only screen and (max-width: 320px) {
+    .title-section {
+      font-size: 3em; } }
+
+.title-h2 {
+  position: relative;
+  float: left;
+  width: 100%;
+  font-family: "Gotham-Medium", sans-serif;
+  font-size: 1.8em;
+  color: #F94615;
+  margin-bottom: 1.4em;
+  line-height: 1.4em; }
+
+.p-default {
+  position: relative;
+  float: left;
+  width: 100%;
+  font-family: "Gotham-Book", sans-serif;
+  font-size: 1.1em;
+  color: #000;
+  margin-bottom: 1.8em;
+  line-height: 1.6em; }
+  @media only screen and (max-width: 992px) {
+    .p-default {
+      font-size: 1.35em; } }
+  .p-default span {
+    font-family: "Gotham-Black", sans-serif;
+    color: #F94615; }
+
+.title-cta {
+  color: #FFF;
+  font-size: 2.5em;
+  position: relative;
+  float: left;
+  text-align: center;
+  width: 100%;
+  font-family: "Gotham-Bold", sans-serif;
+  font-weight: 700;
+  margin-bottom: 1.6em;
+  margin-top: 2em;
+  line-height: 1.5em; }
+  @media only screen and (max-width: 992px) {
+    .title-cta {
+      margin-bottom: 1em;
+      margin-top: 1em; } }
+  .title-cta:after {
+    content: '';
+    position: absolute;
+    bottom: 1em;
+    width: 1.8em;
+    height: 8px;
+    background-color: #FFF;
+    top: 3.5em;
+    float: left;
+    left: 5px;
+    margin-left: 50%;
+    transform: translatex(-50%); }
+    @media only screen and (max-width: 992px) {
+      .title-cta:after {
+        display: none !important; } }
+  .title-cta .extra-big {
+    font-size: 4rem; }
+
+.sub-title-cta {
+  position: relative;
+  float: left;
+  width: 100%;
+  font-family: "Gotham-Book", sans-serif;
+  font-size: 1.1em;
+  color: #FFF;
+  margin-bottom: 1.2em;
+  line-height: 1.6em;
+  text-align: center;
+  padding: 0px 15%; }
+  @media only screen and (max-width: 992px) {
+    .sub-title-cta {
+      margin-bottom: 0.2em;
+      margin-top: 0.2em;
+      padding: 0px 2%;
+      font-size: 1.4em; } }
+
+.img-decorative {
+  height: 12.5em;
+  width: 12.5em;
+  margin-bottom: 2em; }
+
+.generic-relative {
+  position: relative;
+  float: left;
+  width: 100%; }
+
+#form-work-here,
+#form-contact {
+  position: relative;
+  float: left;
+  width: 100%; }
+
+label {
+  width: 100%;
+  font-family: "Gotham-Book", sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em; }
+
+input,
+textarea {
+  font-family: "Gotham-Book", sans-serif;
+  font-size: 1.3rem !important;
+  font-weight: 400;
+  border: 1px solid #000;
+  width: 100%;
+  height: 60px;
+  padding: 0 1em;
+  font-size: 1em;
+  margin-bottom: 1em;
+  -webkit-transition: all 0.25s ease-in-out 0s;
+  -moz-transform: all 0.25s ease-in-out 0s;
+  -ms-transition: all 0.25s ease-in-out 0s;
+  transition: all 0.25s ease-in-out 0s; }
+  input:focus,
+  textarea:focus {
+    border-left-width: 5px; }
+  @media only screen and (max-width: 992px) {
+    input,
+    textarea {
+      height: 50px; } }
+
+textarea {
+  height: 120px;
+  padding-top: 1em;
+  resize: none; }
+
+.default-section, #home, #sobre, #cta-1 {
+  position: relative;
+  float: left;
+  width: 100%; }
+
+#home {
+  background: linear-gradient(rgba(249, 70, 21, 0.4), rgba(249, 70, 21, 0.4)), url("../../../images/lien-bg-top.jpg");
+  height: 100vh; }
+  @media only screen and (max-width: 992px) {
+    #home {
+      height: auto; } }
+  #home .decoration {
+    position: absolute;
+    height: 25em;
+    width: 25em;
+    left: 63%;
+    top: 25%;
+    filter: alpha(opacity=0.9);
+    -moz-opacity: 0.9;
+    -khtml-opacity: 0.9;
+    opacity: 0.9;
+    background-image: url("../../../images/lien-logo-white.svg");
+    background-repeat: no-repeat; }
+  #home .decoration-2 {
+    height: 60em;
+    width: 60em;
+    top: 5%;
+    left: 70%;
+    filter: alpha(opacity=0.1);
+    -moz-opacity: 0.1;
+    -khtml-opacity: 0.1;
+    opacity: 0.1; }
+  #home .decoration-3 {
+    height: 100em;
+    width: 100em;
+    top: -15%;
+    left: 0%;
+    filter: alpha(opacity=0.03);
+    -moz-opacity: 0.03;
+    -khtml-opacity: 0.03;
+    opacity: 0.03; }
+  #home .row-home {
+    margin-top: 14.28em; }
+    @media only screen and (max-width: 992px) {
+      #home .row-home {
+        margin-top: 7.14em; } }
+    #home .row-home h1 {
+      margin-bottom: 2.85rem; }
+      @media only screen and (max-width: 992px) {
+        #home .row-home h1 {
+          margin-top: 2em; } }
+    #home .row-home p {
+      margin-bottom: 4rem; }
+    #home .row-home button {
+      margin-bottom: 2.85rem; }
+
+#sobre {
+  margin-top: 2.14em;
+  margin-bottom: 2.14em; }
+  #sobre .row-missao-visao-valores {
+    margin-top: 6.42em; }
+    #sobre .row-missao-visao-valores .col-missao-visao-valores {
+      border: 4px solid #ccc;
+      margin-left: 8px;
+      margin-right: 8px;
+      width: calc(33.333% - 16px); }
+      @media only screen and (max-width: 992px) {
+        #sobre .row-missao-visao-valores .col-missao-visao-valores {
+          width: calc(80% - 16px);
+          margin-bottom: 5.5em;
+          border-width: 2px;
+          margin-left: 10%;
+          margin-right: 10%; } }
+      @media only screen and (max-width: 768px) {
+        #sobre .row-missao-visao-valores .col-missao-visao-valores {
+          width: 90%;
+          margin-left: 5%;
+          margin-right: 5%; } }
+      #sobre .row-missao-visao-valores .col-missao-visao-valores img {
+        position: absolute;
+        top: -50px;
+        right: 15px;
+        height: 100px;
+        width: 100px; }
+        @media only screen and (max-width: 992px) {
+          #sobre .row-missao-visao-valores .col-missao-visao-valores img {
+            height: 60px;
+            width: 60px;
+            top: -30px; } }
+      #sobre .row-missao-visao-valores .col-missao-visao-valores h2 {
+        color: #F94615;
+        font-size: 2em;
+        position: relative;
+        float: left;
+        width: 100%;
+        font-family: "Gotham-Book", sans-serif;
+        font-weight: 700;
+        margin-bottom: 1.6em; }
+        @media only screen and (max-width: 992px) {
+          #sobre .row-missao-visao-valores .col-missao-visao-valores h2 {
+            text-align: center; } }
+      @media only screen and (max-width: 992px) {
+        #sobre .row-missao-visao-valores .col-missao-visao-valores p {
+          text-align: center; } }
+
+#cta-1 {
+  margin-top: 4.2em;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../../../images/lien-bg-cta-1.jpg");
+  background-size: initial;
+  background-position: center center;
+  height: 550px; }
+  @media only screen and (max-width: 992px) {
+    #cta-1 {
+      height: auto; } }
+  #cta-1 .row-cta button {
+    margin-top: 2.1em;
+    background-color: #FFF;
+    color: #000; }
+    #cta-1 .row-cta button:hover {
+      background-color: transparent;
+      color: #FFF; }
