--- a/assets/scss/base/includes/colors.scss
+++ b/assets/scss/base/includes/colors.scss
@@ -7,6 +7,7 @@
 
 $color-white: #FFF;
 $color-black: #000;
-$color-orange: #f94615;
+$color-orange: #F94615;
+$color-gray: #ccc;
 $color-light-gray: #6f6f6f;
 $color-dark-gray: #58585a;
