--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -9,3 +9,407 @@
 @import '../base/includes/sizes.scss';
 @import '../base/includes/colors.scss';
 @import '../base/includes/fonts.scss';
+
+html,
+body {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
+body {
+	@include responsive(s2) {
+		font-size: 12px;
+	}
+	@include responsive(s3) {
+		font-size: 11px;
+	}
+	@include responsive(s4) {
+		font-size: 10px;
+	}
+}
+
+// Buttons
+.lien-button {
+	height: 5rem;
+	width: 25rem;
+	font-family: $font-secondary;
+	background-color: $color-white;
+	border: none;
+	color: $color-black;
+	padding: 0px;
+	border-radius: 40px;
+	font-size: 1.2rem;
+	letter-spacing: 0.5px;
+	text-transform: uppercase;
+	@include transition(0.25s);
+	&:hover {
+		background-color: transparent;
+		color: $color-white;
+		border: 1px solid $color-white;
+	}
+	@include responsive(s2) {
+		height: 4.2rem;
+		width: 12.8rem;
+		font-size: 1rem;
+		margin-left: 50%;
+		-webkit-transform: translatex(-6.42rem) !important;
+		-moz-transform: translatex(-6.42rem) !important;
+		-ms-transform: translatex(-6.42rem) !important;
+		transform: translatex(-6.42rem) !important;
+	}
+}
+
+.lien-button-cta {
+	width: 20rem;
+	font-weight: 400;
+	font-size: 1.1rem;
+	margin-left: 50%;
+	color: $color-white!important;
+	border-radius: 40px;
+	text-transform: uppercase;
+	background-color: $color-orange!important;
+	-webkit-transform: translatex(-10rem) !important;
+	-moz-transform: translatex(-10rem) !important;
+	-ms-transform: translatex(-10rem) !important;
+	transform: translatex(-10rem) !important;
+	&:hover {
+		background-color: transparent!important;
+		color: $color-white!important;
+		border: 1px solid $color-white!important;
+	}
+	@include responsive(s2) {
+		margin-bottom: 2rem;
+		font-size: 1rem;
+	}
+}
+
+//Default Background
+.bgs {
+	position: relative;
+	float: left;
+	width: 100%;
+	background-position: top center;
+	background-size: cover;
+	@include responsive(s2) {
+		background-attachment: scroll !important;
+		background-repeat: no-repeat !important;
+		background-position: center center !important;
+	}
+}
+
+// Default Styles
+.title-big-white {
+	font-family: $font-tertiary;
+	font-size: 3.2em;
+	color: $color-white;
+	.extra-big{
+		font-size: 6rem;
+	}
+}
+
+.title-section {
+	color: $color-dark-gray;
+	font-size: 6em;
+	position: relative;
+	float: left;
+	width: 100%;
+	font-family: $font-tertiary;
+	font-weight: 700;
+	margin-bottom: 0.8em;
+	margin-top: 1em;
+	&:after {
+		content: '';
+		position: absolute;
+		bottom: 1em;
+		width: 1.85em;
+		height: 8px;
+		background-color: $color-orange;
+		top: 1.3em;
+		float: left;
+		left: 5px;
+	}
+	@include responsive(s4) {
+		font-size: 3.3em;
+	}
+	@include responsive(s5) {
+		font-size: 3em;
+	}
+}
+
+.title-h2 {
+	position: relative;
+	float: left;
+	width: 100%;
+	font-family: $font-primary;
+	font-size: 1.8em;
+	color: $color-orange;
+	margin-bottom: 1.4em;
+	line-height: 1.4em;
+}
+
+.p-default {
+	position: relative;
+	float: left;
+	width: 100%;
+	font-family: $font-secondary;
+	font-size: 1.1em;
+	color: $color-black;
+	margin-bottom: 1.8em;
+	line-height: 1.6em;
+	@include responsive(s2) {
+		font-size: 1.35em;
+	}
+	span{
+		font-family: $font-tertiary;
+		color: $color-orange;
+	}
+}
+
+.title-cta {
+	color: $color-white;
+	font-size: 2.5em;
+	position: relative;
+	float: left;
+	text-align: center;
+	width: 100%;
+	font-family: $font-quaternary;
+	font-weight: 700;
+	margin-bottom: 1.6em;
+	margin-top: 2em;
+	line-height: 1.5em;
+	@include responsive(s2) {
+		margin-bottom: 1em;
+		margin-top: 1em;
+	}
+	&:after {
+		content: '';
+		position: absolute;
+		bottom: 1em;
+		width: 1.8em;
+		height: 8px;
+		background-color: #FFF;
+		top: 3.5em;
+		float: left;
+		left: 5px;
+		margin-left: 50%;
+		transform: translatex(-50%);
+		@include responsive(s2) {
+			display: none !important;
+		}
+	}
+	.extra-big{
+		font-size: 4rem;
+	}
+}
+
+.sub-title-cta {
+	position: relative;
+	float: left;
+	width: 100%;
+	font-family: $font-secondary;
+	font-size: 1.1em;
+	color: $color-white;
+	margin-bottom: 1.2em;
+	line-height: 1.6em;
+	text-align: center;
+	padding: 0px 15%;
+	@include responsive(s2) {
+		margin-bottom: 0.2em;
+		margin-top: 0.2em;
+		padding: 0px 2%;
+		font-size: 1.4em;
+	}
+}
+
+.img-decorative {
+	height: 12.5em;
+	width: 12.5em;
+	margin-bottom: 2em;
+}
+
+.generic-relative {
+	position: relative;
+	float: left;
+	width: 100%;
+}
+
+// Forms
+#form-work-here,
+#form-contact {
+	position: relative;
+	float: left;
+	width: 100%;
+}
+
+label {
+	width: 100%;
+	font-family: $font-secondary;
+	font-size: 1.2rem;
+	font-weight: 400;
+	margin-bottom: 0.5em;
+	margin-top: 0.5em;
+}
+
+input,
+textarea {
+	font-family: $font-secondary;
+	font-size: 1.3rem !important;
+	font-weight: 400;
+	border: 1px solid $color-black;
+	width: 100%;
+	height: 60px;
+	padding: 0 1em;
+	font-size: 1em;
+	margin-bottom: 1em;
+	@include transition(0.25s) &:focus {
+		border-left-width: 5px;
+	}
+	@include responsive(s2) {
+		height: 50px;
+	}
+}
+
+textarea {
+	height: 120px;
+	padding-top: 1em;
+	resize: none;
+}
+
+// Sections
+.default-section {
+	position: relative;
+	float: left;
+	width: 100%;
+}
+
+#home {
+	@extend .default-section;
+	background: linear-gradient( rgba(249, 70, 21, 0.4), rgba(249, 70, 21, 0.4)), url('../../../images/lien-bg-top.jpg');
+	height: 100vh;
+	@include responsive(s2) {
+		height: auto;
+	}
+	@extend .bgs;
+	.decoration {
+		position: absolute;
+		height: 25em;
+		width: 25em;
+		left: 63%;
+		top: 25%;
+		@include opacity(0.9) background-image: url('../../../images/lien-logo-white.svg');
+		background-repeat: no-repeat;
+	}
+	.decoration-2 {
+		height: 60em;
+		width: 60em;
+		top: 5%;
+		left: 70%;
+		@include opacity(0.1)
+	}
+	.decoration-3 {
+		height: 100em;
+		width: 100em;
+		top: -15%;
+		left: 0%;
+		@include opacity(0.03)
+	}
+	.row-home {
+		margin-top: 14.28em;
+		@include responsive(s2) {
+			margin-top: 7.14em;
+		}
+		h1 {
+			margin-bottom: 2.85rem;
+			@include responsive(s2) {
+				margin-top: 2em;
+			}
+		}
+		p {
+			margin-bottom: 4rem;
+		}
+		button {
+			margin-bottom: 2.85rem;
+		}
+	}
+}
+
+#sobre {
+	@extend .default-section;
+	margin-top: 2.14em;
+	margin-bottom: 2.14em;
+	.row-missao-visao-valores {
+		margin-top: 6.42em;
+		.col-missao-visao-valores {
+			border: 4px solid $color-gray;
+			margin-left: 8px;
+			margin-right: 8px;
+			width: calc(33.333% - 16px);
+			@include responsive(s2) {
+				width: calc(80% - 16px);
+				margin-bottom: 5.5em;
+				border-width: 2px;
+				margin-left: 10%;
+				margin-right: 10%;
+			}
+			@include responsive(s3) {
+				width: 90%;
+				margin-left: 5%;
+				margin-right: 5%;
+			}
+			img {
+				position: absolute;
+				top: -50px;
+				right: 15px;
+				height: 100px;
+				width: 100px;
+				@include responsive(s2) {
+					height: 60px;
+					width: 60px;
+					top: -30px;
+				}
+			}
+			h2 {
+				color: $color-orange;
+				font-size: 2em;
+				position: relative;
+				float: left;
+				width: 100%;
+				font-family: $font-secondary;
+				font-weight: 700;
+				margin-bottom: 1.6em;
+				@include responsive(s2) {
+					text-align: center;
+				}
+			}
+			p {
+				@include responsive(s2) {
+					text-align: center;
+				}
+			}
+		}
+	}
+}
+
+#cta-1 {
+	@extend .default-section;
+	margin-top: 4.2em;
+	background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../../images/lien-bg-cta-1.jpg');
+	background-size: initial;
+	background-position: center center;
+	height: 550px;
+	@include responsive(s2) {
+		height: auto;
+	}
+	@extend .bgs;
+	.row-cta {
+		button {
+			margin-top: 2.1em;
+			background-color: $color-white;
+			color: $color-black;
+			&:hover {
+				background-color: transparent;
+				color: $color-white;
+			}
+		}
+	}
+}
