--- a/assets/scss/base/includes/colors.scss
+++ b/assets/scss/base/includes/colors.scss
@@ -11,3 +11,5 @@ $color-orange: #F94615;
 $color-gray: #ccc;
 $color-light-gray: #6f6f6f;
 $color-dark-gray: #58585a;
+$color-deep-gray: #929294;
+$color-very-dark-gray: #3B3B3B;
