--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -233,21 +233,20 @@ body {
 	width: 100%;
 }
 
+.no-padding{
+	padding: 0px;
+}
+
+.padding-left{
+	padding-left: 15px;
+}
+
 // Forms
-#form-work-here,
+#form-franqueado,
 #form-contact {
 	position: relative;
 	float: left;
 	width: 100%;
-}
-
-label {
-	width: 100%;
-	font-family: $font-secondary;
-	font-size: 1.2rem;
-	font-weight: 400;
-	margin-bottom: 0.5em;
-	margin-top: 0.5em;
 }
 
 input,
@@ -255,17 +254,24 @@ textarea {
 	font-family: $font-secondary;
 	font-size: 1.3rem !important;
 	font-weight: 400;
-	border: 1px solid $color-black;
+	background-color: rgba(87,52,34,0.6);
+	border: none;
 	width: 100%;
+	border-radius: 0px;
+	color: $color-white!important;
 	height: 60px;
+	border-left: 0px solid rgba(87, 52, 34, 0.8);
 	padding: 0 1em;
 	font-size: 1em;
 	margin-bottom: 1em;
-	@include transition(0.25s) &:focus {
-		border-left-width: 5px;
-	}
+	@include transition(0.25s);
 	@include responsive(s2) {
 		height: 50px;
+	}
+	@include placeholder($color-white);
+	&:hover, &:focus{
+		border-left: 4px solid rgba(87, 52, 34, 0.8);
+		@include transition(0.25s);
 	}
 }
 
@@ -282,7 +288,7 @@ textarea {
 	width: 100%;
 }
 
-#home {
+#seja-um-franqueado {
 	@extend .default-section;
 	background: linear-gradient( rgba(249, 70, 21, 0.4), rgba(249, 70, 21, 0.4)), url('../../../images/lien-bg-top.jpg');
 	height: 100vh;
@@ -290,13 +296,23 @@ textarea {
 		height: auto;
 	}
 	@extend .bgs;
+	.abf{
+		position: absolute;
+		height: 15em;
+		width: 7em;
+		left: 70.5%;
+		bottom: 4em;
+		background-image: url('../../../images/lien-abf-top.svg');
+		background-repeat: no-repeat;
+	}
 	.decoration {
 		position: absolute;
 		height: 25em;
 		width: 25em;
 		left: 63%;
 		top: 25%;
-		@include opacity(0.9) background-image: url('../../../images/lien-logo-white.svg');
+		@include opacity(0.9);
+		background-image: url('../../../images/lien-logo-white.svg');
 		background-repeat: no-repeat;
 	}
 	.decoration-2 {
@@ -304,31 +320,70 @@ textarea {
 		width: 60em;
 		top: 5%;
 		left: 70%;
-		@include opacity(0.1)
+		@include opacity(0.1);
 	}
 	.decoration-3 {
 		height: 100em;
 		width: 100em;
 		top: -15%;
 		left: 0%;
-		@include opacity(0.03)
+		@include opacity(0.03);
 	}
 	.row-home {
-		margin-top: 14.28em;
+		margin-top: 12.28em;
 		@include responsive(s2) {
 			margin-top: 7.14em;
 		}
 		h1 {
+			&:after {
+				content: '';
+				position: absolute;
+				bottom: 1em;
+				height: 8px;
+				width: 2em;
+				background-color: #000000;
+				top: 3.8em;
+				float: left;
+				opacity: 0.31;
+				left: 17px;
+			}
 			margin-bottom: 2.85rem;
 			@include responsive(s2) {
 				margin-top: 2em;
 			}
 		}
 		p {
-			margin-bottom: 4rem;
+			margin-top: 1em;
+			color: $color-white;
+			span{
+				color: $color-white;
+			}
 		}
 		button {
+			left: 50%;
+			-webkit-transform: translatex(-12.5rem) !important;
+			-moz-transform: translatex(-12.5rem) !important;
+			-ms-transform: translatex(-12.5rem) !important;
+			transform: translatex(-12.5rem) !important;
+			margin-top: 2em;
 			margin-bottom: 2.85rem;
+			padding-left: 20px;
+			position: relative;
+			border: 1px solid $color-white;
+			&:hover{
+				svg{
+					.cls-1 {
+						fill: $color-white;
+					}
+				}
+			}
+			svg{
+				@include transition(0.25s);
+				top:18px;
+				position: absolute;
+				height: 30px;
+				left: 30px;
+			}
 		}
 	}
 }
@@ -337,57 +392,6 @@ textarea {
 	@extend .default-section;
 	margin-top: 2.14em;
 	margin-bottom: 2.14em;
-	.row-missao-visao-valores {
-		margin-top: 6.42em;
-		.col-missao-visao-valores {
-			border: 4px solid $color-gray;
-			margin-left: 8px;
-			margin-right: 8px;
-			width: calc(33.333% - 16px);
-			@include responsive(s2) {
-				width: calc(80% - 16px);
-				margin-bottom: 5.5em;
-				border-width: 2px;
-				margin-left: 10%;
-				margin-right: 10%;
-			}
-			@include responsive(s3) {
-				width: 90%;
-				margin-left: 5%;
-				margin-right: 5%;
-			}
-			img {
-				position: absolute;
-				top: -50px;
-				right: 15px;
-				height: 100px;
-				width: 100px;
-				@include responsive(s2) {
-					height: 60px;
-					width: 60px;
-					top: -30px;
-				}
-			}
-			h2 {
-				color: $color-orange;
-				font-size: 2em;
-				position: relative;
-				float: left;
-				width: 100%;
-				font-family: $font-secondary;
-				font-weight: 700;
-				margin-bottom: 1.6em;
-				@include responsive(s2) {
-					text-align: center;
-				}
-			}
-			p {
-				@include responsive(s2) {
-					text-align: center;
-				}
-			}
-		}
-	}
 }
 
 #cta-1 {
@@ -396,7 +400,7 @@ textarea {
 	background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../../images/lien-bg-cta-1.jpg');
 	background-size: initial;
 	background-position: center center;
-	height: 550px;
+	height: 510px;
 	@include responsive(s2) {
 		height: auto;
 	}
@@ -412,4 +416,120 @@ textarea {
 			}
 		}
 	}
+}
+
+#duvidas-frequentes {
+	@extend .default-section;
+	margin-top: 2.14em;
+	margin-bottom: 2.14em;
+	.row-duvidas-frequentes{
+		.title-section{
+			&:after {
+				top: 2.4em;
+			}
+		}
+	}
+}
+
+#cta-2 {
+	@extend .default-section;
+	margin-top: 4.2em;
+	background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../../images/lien-bg-cta-2.jpg');
+	background-size: initial;
+	background-position: top center;
+	height: 510px;
+	@include responsive(s2) {
+		height: auto;
+	}
+	@extend .bgs;
+	.row-cta {
+		button {
+			margin-top: 2.1em;
+			background-color: $color-white;
+			color: $color-black;
+			&:hover {
+				background-color: transparent;
+				color: $color-white;
+			}
+		}
+	}
+}
+
+#glossario {
+	@extend .default-section;
+	margin-top: 2.14em;
+	margin-bottom: 2.14em;
+}
+
+#cta-3 {
+	@extend .default-section;
+	margin-top: 4.2em;
+	background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../../../images/lien-bg-cta-3.jpg');
+	background-size: initial;
+	background-position: center center;
+	height: 510px;
+	@include responsive(s2) {
+		height: auto;
+	}
+	@extend .bgs;
+	.row-cta {
+		button {
+			margin-top: 2.1em;
+			background-color: $color-white;
+			color: $color-black;
+			&:hover {
+				background-color: transparent;
+				color: $color-white;
+			}
+		}
+	}
+}
+
+#seguradoras-associadas {
+	@extend .default-section;
+	margin-top: 2.14em;
+	margin-bottom: 2.14em;
+	.row-seguradoras-associadas {
+		.title-section {
+			&:after {
+				top: 2.4em;
+			}
+		}
+	}
+}
+
+#contato {
+	@extend .default-section;
+	background-color: $color-deep-gray;
+	margin-top: 2.14em;
+	margin-bottom: 0em;
+	.row-contato {
+		.title-section {
+			text-align: center;
+			color: $color-white;
+			&:after {
+				content: '';
+				position: absolute;
+				bottom: 1em;
+				width: 1.8em;
+				height: 8px;
+				background-color: $color-very-dark-gray !important;
+				float: left;
+				left: 5px;
+				margin-left: 50%;
+				transform: translatex(-50%);
+			}
+		}
+		.title-h2{
+			text-align: center;
+			color: $color-white;
+			font-size: 1.4em;
+			font-family: $font-secondary;
+		}
+	}
+}
+
+footer{
+	@extend .default-section;
+	background-color: $color-very-dark-gray;
 }
